Add support to unlink lunch flow accounts (#318)
* Add support to unlink lunch flow accounts

* add support to link and unlink to any provider

* Fix tests and query

* Let's keep Amr happy about his brand

* Wrap unlink operations in a transaction and add error handling.

* Fix tests

---------

Co-authored-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -3,6 +3,8 @@ en:
   accounts:
     account:
       link_lunchflow: Link with Lunch Flow
+      link_provider: Link with provider
+      unlink_provider: Unlink from provider
       troubleshoot: Troubleshoot
     chart:
       data_not_available: Data not available for the selected period
@@ -10,6 +12,7 @@ en:
       success: "%{type} account created"
     destroy:
       success: "%{type} account scheduled for deletion"
+      cannot_delete_linked: "Cannot delete a linked account. Please unlink it first."
     empty:
       empty_message: Add an account either via connection, importing or entering manually.
       new_account: New account
@@ -24,6 +27,8 @@ en:
         other_accounts: Other accounts
       new_account: New account
       sync: Sync all
+    sync_all:
+      syncing: "Syncing accounts..."
     new:
       import_accounts: Import accounts
       method_selector:
@@ -85,6 +90,25 @@ en:
       credit_card: Credit Card
       loan: Loan
       other_liability: Other Liability
+    confirm_unlink:
+      title: Unlink account from provider?
+      description_html: "You are about to unlink <strong>%{account_name}</strong> from <strong>%{provider_name}</strong>. This will convert it to a manual account."
+      warning_title: What this means
+      warning_no_sync: The account will no longer sync automatically with your bank
+      warning_manual_updates: You will need to add transactions and update balances manually
+      warning_transactions_kept: All existing transactions and balances will be preserved
+      warning_can_delete: After unlinking, you will be able to delete the account if needed
+      confirm_button: Confirm and unlink
+    unlink:
+      success: "Account unlinked successfully. It is now a manual account."
+      not_linked: "Account is not linked to a provider"
+      error: "Failed to unlink account: %{error}"
+      generic_error: "An unexpected error occurred. Please try again."
+    select_provider:
+      title: Select a provider to link
+      description: "Choose which provider you want to use to link %{account_name}"
+      already_linked: "Account is already linked to a provider"
+      no_providers: "No providers are currently configured"
 
   email_confirmations:
     new:
