--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -81,7 +81,7 @@ en:
         last_name: Last Name
         page_title: Profile Info
         pending: Pending
-        profile_subtitle: Customize how you appear on %{product}
+        profile_subtitle: Customize how you appear on %{product_name}
         profile_title: Personal
         remove_invitation: Remove Invitation
         remove_member: Remove Member
