--- a/config/locales/views/layout/tr.yml
+++ b/config/locales/views/layout/tr.yml
@@ -3,7 +3,7 @@ tr:
   layouts:
     auth:
       existing_account: Zaten bir hesabınız var mı?
-      no_account: Maybe'ye yeni misiniz?
+      no_account: "%{product_name}'ye yeni misiniz?"
       sign_in: Giriş yap
       sign_up: Hesap oluştur
       your_account: Hesabınız
