--- a/config/locales/views/registrations/ca.yml
+++ b/config/locales/views/registrations/ca.yml
@@ -20,6 +20,6 @@ ca:
       submit: Crea el compte
       title: Crea el teu compte
       welcome_body: Per començar, has de registrar un compte nou. Després podràs configurar opcions addicionals dins l'aplicació.
-      welcome_title: Benvingut/da a Self Hosted Maybe!
+      welcome_title: Benvingut/da a Self Hosted %{product_name}!
       password_placeholder: Introdueix la teva contrasenya
 
