--- a/config/locales/views/registrations/tr.yml
+++ b/config/locales/views/registrations/tr.yml
@@ -21,5 +21,5 @@ tr:
       submit: Hesap oluştur
       title: Hesabınızı oluşturun
       welcome_body: Başlamak için yeni bir hesap oluşturmalısınız. Daha sonra uygulama içinde ek ayarları yapılandırabileceksiniz.
-      welcome_title: Self Hosted Maybe'ye Hoş Geldiniz!
+      welcome_title: Self Hosted %{product_name}'ye Hoş Geldiniz!
       password_placeholder: Şifrenizi girin
