added german translation (de) (#208)
* added german translation

consistently added all translation yml files for german language

* Correct quotation and syntax errors in new de locale files

Corrected misplaced or missing quotation marks in YAML

* Updated German translations

Added missing files, fixed for customizable branding

* corrected yml formatting

added missing "" when : where used in the string

* Interpolation errors

* More interpolation issues

* Last round of interpolation errors?

* Add German to supported locales

* Still a few more interpolations

---------

Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>
Co-authored-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/config/locales/views/lunchflow_items/en.yml
+++ b/config/locales/views/lunchflow_items/en.yml
@@ -39,7 +39,7 @@ en:
       api_error: "API error: %{message}"
       cancel: Cancel
       configure_name_in_lunchflow: Cannot import - please configure account name in Lunchflow
-      description: Select the accounts you want to link to your Sure account.
+      description: Select the accounts you want to link to your %{product_name} account.
       link_accounts: Link selected accounts
       no_accounts_found: No accounts found. Please check your API key configuration.
       no_api_key: Lunch Flow API key is not configured. Please configure it in Settings.
