--- a/config/locales/views/other_assets/en.yml
+++ b/config/locales/views/other_assets/en.yml
@@ -3,7 +3,7 @@ en:
   other_assets:
     edit:
       edit: Edit %{account}
-      balance_tracking_info: "Other Assets are tracked via manual valuations using 'New Balance', not transactions. Transactions will not affect the account balance."
+      balance_tracking_info: "Other Assets are tracked via manual valuations using 'New Balance', not transactions. Cashflow will not affect the account balance."
     new:
       title: Enter asset details
-      balance_tracking_info: "Other Assets are tracked via manual valuations using 'New Balance', not transactions. Transactions will not affect the account balance."
+      balance_tracking_info: "Other Assets are tracked via manual valuations using 'New Balance', not transactions. Cashflow will not affect the account balance."
