Fixed some missing translations, added ro to SUPPORTED_LOCALES in languages_helper.rb

--- a/config/locales/views/properties/ro.yml
+++ b/config/locales/views/properties/ro.yml
@@ -14,7 +14,7 @@ ro:
       locality: Oraș
       locality_placeholder: București
       none: Niciunul
-      postal_code: ZIP/Postal code
+      postal_code: Cod Poștal
       postal_code_placeholder: '94105'
       region: Județ/Provincie
       region_placeholder: B
