--- a/config/locales/views/accounts/ro.yml
+++ b/config/locales/views/accounts/ro.yml
@@ -29,6 +29,7 @@ ro:
       method_selector:
         connected_entry: Conectează cont
         connected_entry_eu: Conectează cont UE
+        link_with_provider: "Conectează cu %{provider}"
         lunchflow_entry: Conectează cont Lunch Flow
         manual_entry: Introdu soldul contului
         title: Cum dorești să adaugi?
