Add investment tracking to expenses
Add new sections to dashboard and reporting around investments.

--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -25,6 +25,7 @@ en:
         no_data_title: "No cash flow data for this time period"
         no_data_description: "Add transactions to display cash flow data or expand the time period"
         add_transaction: "Add transaction"
+        include_investments: "Include investments"
       no_accounts:
         title: "No accounts yet"
         description: "Add accounts to display net worth data"
@@ -35,3 +36,16 @@ en:
         categories: "Categories"
         value: "Value"
         weight: "Weight"
+      investment_summary:
+        title: "Investments"
+        total_return: "Total Return"
+        holding: "Holding"
+        weight: "Weight"
+        value: "Value"
+        return: "Return"
+        period_activity: "%{period} Activity"
+        contributions: "Contributions"
+        withdrawals: "Withdrawals"
+        trades: "Trades"
+        no_investments: "No investment accounts"
+        add_investment: "Add an investment account to track your portfolio"
