Added net worth period & added side menu translations (en default and it)

--- a/config/locales/views/layout/en.yml
+++ b/config/locales/views/layout/en.yml
@@ -10,3 +10,9 @@ en:
       footer:
         privacy_policy: Privacy Policy
         terms_of_service: Terms of Service
+  navigation:
+    home: Home
+    transactions: Transactions
+    reports: Reports
+    budgets: Budgets
+    assistant: Assistant
