--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -15,8 +15,13 @@ en:
         no_account_subtitle: Since no accounts have been added, there's no data to display. Add your first accounts to start viewing dashboard data.
         no_account_title: No accounts yet
       balance_sheet:
+        asset: Assets
+        liability: Liabilities
         no_items: "No %{name} yet"
         add_accounts: "Add your %{name} accounts to see a full breakdown"
+        name: Name
+        value: Value
+        weight: Weight
       cashflow_sankey:
         title: "Cashflow"
         no_data_title: "No cash flow data for this time period"
