--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -15,8 +15,13 @@ it:
         no_account_subtitle: Poiché non hai ancora aggiunto alcun conto, non ci sono dati da visualizzare. Aggiungi il tuo primo conto per iniziare a vedere i dati nel dashboard.
         no_account_title: Ancora nessun conto
       balance_sheet:
+        asset: Attività
+        liability: Passività
         no_items: "Ancora nessun %{name}"
         add_accounts: "Aggiunti i tuoi %{name} per visualizzare un riepilogo completo"
+        name: Nome
+        value: Valore
+        weight: Peso
       cashflow_sankey:
         title: "Flusso di cassa"
         no_data_title: "Nessun dato per il flusso di casssa per questo period"
