--- a/config/locales/views/shared/en.yml
+++ b/config/locales/views/shared/en.yml
@@ -12,3 +12,21 @@ en:
       syncing: Syncing accounts data...
     trend_change:
       no_change: "no change"
+    breadcrumbs:
+      merchants: Merchants
+      import_export: Import/Export
+      reports: Reports
+      guides: Guides
+      profile: Profile Info
+      bank_sync_providers: Bank Sync Providers
+      security: Security
+      preferences: Preferences
+      transactions: Transactions
+      rules: Rules
+      accounts: Accounts
+      categories: Categories
+      tags: Tags
+      recurring_transactions: Recurring Transactions
+      ai_prompts: AI Prompts
+      llm_usage: LLM Usage
+      bank_sync: Bank Sync
