--- a/config/locales/mailers/invitation_mailer/pt-BR.yml
+++ b/config/locales/mailers/invitation_mailer/pt-BR.yml
@@ -2,4 +2,4 @@
 pt-BR:
   invitation_mailer:
     invite_email:
-      subject: "%{inviter} convidou você para se juntar à sua família no Sure!"
+      subject: "%{inviter} convidou você para se juntar à sua família no %{product_name}!"
