--- a/config/locales/models/address/pt-BR.yml
+++ b/config/locales/models/address/pt-BR.yml
@@ -5,7 +5,7 @@ pt-BR:
       country: País
       line1: Endereço Linha 1
       line2: Endereço Linha 2
-      locality: Localidade
+      locality: Cidade
       postal_code: CEP
       region: Estado/Região
     format: "%{line1} %{line2}, %{locality}, %{region} %{postal_code} %{country}"
