--- a/config/locales/models/time_series/value/pt-BR.yml
+++ b/config/locales/models/time_series/value/pt-BR.yml
@@ -6,4 +6,4 @@ pt-BR:
         time_series/value:
           attributes:
             value:
-              must_be_a_money_or_numeric: deve ser um Money ou Numeric
+              must_be_a_money_or_numeric: deve ser um valor monetário ou número
