--- a/config/locales/models/trend/pt-BR.yml
+++ b/config/locales/models/trend/pt-BR.yml
@@ -7,9 +7,9 @@ pt-BR:
           attributes:
             current:
               must_be_of_the_same_type_as_previous: deve ser do mesmo tipo que o anterior
-              must_be_of_type_money_numeric_or_nil: deve ser do tipo Money, Numeric,
-                ou nil
+              must_be_of_type_money_numeric_or_nil: deve ser do tipo monetário, numérico
+                ou nulo
             previous:
               must_be_of_the_same_type_as_current: deve ser do mesmo tipo que o atual
-              must_be_of_type_money_numeric_or_nil: deve ser do tipo Money, Numeric,
-                ou nil
+              must_be_of_type_money_numeric_or_nil: deve ser do tipo monetário, numérico
+                ou nulo
