fix: atualizar fix base

--- a/config/locales/views/email_confirmation_mailer/pt-BR.yml
+++ b/config/locales/views/email_confirmation_mailer/pt-BR.yml
@@ -7,4 +7,4 @@ pt-BR:
       cta: Confirmar alteração de e-mail
       expiry_notice: Este link expirará em %{hours} horas.
       greeting: Olá!
-      subject: 'Maybe: Confirme sua alteração de e-mail'
+      subject: '%{product_name}: Confirme sua alteração de e-mail'
