--- a/config/locales/views/password_mailer/pt-BR.yml
+++ b/config/locales/views/password_mailer/pt-BR.yml
@@ -5,6 +5,6 @@ pt-BR:
       cta: Redefinir sua senha
       ignore_if_not_requested: Se você não fez esta solicitação, pode ignorar este
         e-mail.
-      request_made: Foi feita uma solicitação para redefinir sua senha do Maybe. Clique no link
+      request_made: Foi feita uma solicitação para redefinir sua senha do %{product_name}. Clique no link
         para redefini-la.
-      subject: 'Maybe: Redefinir sua senha'
+      subject: '%{product_name}: Redefinir sua senha'
