--- a/config/locales/views/registrations/pt-BR.yml
+++ b/config/locales/views/registrations/pt-BR.yml
@@ -21,5 +21,5 @@ pt-BR:
       title: Criar sua conta
       welcome_body: Para começar, você deve se inscrever para uma nova conta. Então você
         poderá configurar configurações adicionais dentro do aplicativo.
-      welcome_title: Bem-vindo ao Maybe Auto-Hospedado!
+      welcome_title: Bem-vindo ao Self Hosted %{product_name}!
       password_placeholder: Digite sua senha
