feat: finish translation to brazilian portuguese

--- a/config/locales/views/settings/api_keys/pt-BR.yml
+++ b/config/locales/views/settings/api_keys/pt-BR.yml
@@ -13,33 +13,34 @@ pt-BR:
     api_keys:
       show:
         title: "Gerenciamento de Chave de API"
-      no_api_key:
-        title: "Criar Sua Chave de API"
-        description: "Obtenha acesso programático aos seus dados do Maybe com uma chave de API segura."
-        what_you_can_do: "O que você pode fazer com a API:"
-        feature_1: "Acessar dados da sua conta programaticamente"
-        feature_2: "Construir integrações e aplicações personalizadas"
-        feature_3: "Automatizar recuperação e análise de dados"
-        security_note_title: "Segurança em Primeiro Lugar"
-        security_note: "Sua chave de API terá permissões restritas baseadas nos escopos que você selecionar. Você pode ter apenas uma chave de API ativa por vez."
-        create_api_key: "Criar Chave de API"
-      current_api_key:
-        title: "Sua Chave de API"
-        description: "Sua chave de API ativa está pronta para uso. Mantenha-a segura e nunca a compartilhe publicamente."
-        active: "Ativa"
-        key_name: "Nome"
-        created_at: "Criada"
-        last_used: "Último Uso"
-        expires: "Expira"
-        ago: "atrás"
-        never_used: "Nunca usada"
-        never_expires: "Nunca expira"
-        permissions: "Permissões"
-        usage_instructions_title: "Como usar sua chave de API"
-        usage_instructions: "Inclua sua chave de API no cabeçalho X-Api-Key ao fazer requisições para a API do Maybe:"
-        regenerate_key: "Criar Nova Chave"
-        revoke_key: "Revogar Chave"
-        revoke_confirmation: "Tem certeza de que deseja revogar esta chave de API? Esta ação não pode ser desfeita e desabilitará imediatamente todas as aplicações que usam esta chave."
+        no_api_key:
+          title: "Criar Sua Chave de API"
+          heading: "Acesse os dados da sua conta programaticamente"
+          description: "Obtenha acesso programático aos seus dados do %{product_name} com uma chave de API segura."
+          what_you_can_do: "O que você pode fazer com a API:"
+          feature_1: "Acessar dados da sua conta programaticamente"
+          feature_2: "Construir integrações e aplicações personalizadas"
+          feature_3: "Automatizar recuperação e análise de dados"
+          security_note_title: "Segurança em Primeiro Lugar"
+          security_note: "Sua chave de API terá permissões restritas baseadas nos escopos que você selecionar. Você pode ter apenas uma chave de API ativa por vez."
+          create_api_key: "Criar Chave de API"
+        current_api_key:
+          title: "Sua Chave de API"
+          description: "Sua chave de API ativa está pronta para uso. Mantenha-a segura e nunca a compartilhe publicamente."
+          active: "Ativa"
+          key_name: "Nome"
+          created_at: "Criada"
+          last_used: "Último Uso"
+          expires: "Expira"
+          ago: "atrás"
+          never_used: "Nunca usada"
+          never_expires: "Nunca expira"
+          permissions: "Permissões"
+          usage_instructions_title: "Como usar sua chave de API"
+          usage_instructions: "Inclua sua chave de API no cabeçalho X-Api-Key ao fazer requisições para a API do %{product_name}:"
+          regenerate_key: "Criar Nova Chave"
+          revoke_key: "Revogar Chave"
+          revoke_confirmation: "Tem certeza de que deseja revogar esta chave de API? Esta ação não pode ser desfeita e desabilitará imediatamente todas as aplicações que usam esta chave."
       new:
         title: "Criar Chave de API"
         create_new_key: "Criar Nova Chave de API"
