--- a/config/locales/views/merchants/es.yml
+++ b/config/locales/views/merchants/es.yml
@@ -14,6 +14,10 @@ es:
       empty: Aún no hay comercios
       new: Nuevo comercio
       title: Comercios
+      family_title: Comercios familiares
+      family_empty: Aún no hay comercios familiares
+      provider_title: Comercios del proveedor
+      provider_empty: Ningún comercio del proveedor vinculado a esta familia todavía
     merchant:
       confirm_accept: Eliminar comercio
       confirm_body: ¿Estás seguro de que deseas eliminar este comercio? Eliminar este comercio desvinculará todas las transacciones asociadas y puede afectar a tus informes.
