--- a/config/locales/views/merchants/tr.yml
+++ b/config/locales/views/merchants/tr.yml
@@ -14,6 +14,10 @@ tr:
       empty: "Henüz satıcı yok"
       new: "Yeni satıcı"
       title: "Satıcılar"
+      family_title: "Aile satıcıları"
+      family_empty: "Henüz aile satıcısı yok"
+      provider_title: "Sağlayıcı satıcıları"
+      provider_empty: "Bu aileye bağlı sağlayıcı satıcısı yok"
     merchant:
       confirm_accept: "Satıcıyı sil"
       confirm_body: "Bu satıcıyı silmek istediğinizden emin misiniz? Satıcıyı kaldırmak, ilişkili tüm işlemlerin bağlantısını kaldıracak ve raporlamanızı etkileyebilir."
