--- a/config/locales/views/merchants/de.yml
+++ b/config/locales/views/merchants/de.yml
@@ -14,6 +14,10 @@ de:
       empty: Noch keine Händler vorhanden
       new: Neuer Händler
       title: Händler
+      family_title: Händler der Familie
+      family_empty: Noch keine Händler der Familie vorhanden
+      provider_title: Anbieter-Händler
+      provider_empty: Noch keine Anbieter-Händler mit dieser Familie verbunden
     merchant:
       confirm_accept: Händler löschen
       confirm_body: Bist du sicher dass du diesen Händler löschen möchtest Das Entfernen dieses Händlers wird alle zugehörigen Transaktionen trennen und kann deine Auswertungen beeinflussen
