--- a/config/locales/views/merchants/en.yml
+++ b/config/locales/views/merchants/en.yml
@@ -14,6 +14,10 @@ en:
       empty: No merchants yet
       new: New merchant
       title: Merchants
+      family_title: Family merchants
+      family_empty: No family merchants yet
+      provider_title: Provider merchants
+      provider_empty: No provider merchants linked to this family yet
     merchant:
       confirm_accept: Delete merchant
       confirm_body: Are you sure you want to delete this merchant? Removing this merchant
