--- a/config/locales/views/merchants/nb.yml
+++ b/config/locales/views/merchants/nb.yml
@@ -14,6 +14,10 @@ nb:
       empty: Ingen forhandlere ennå
       new: Ny forhandler
       title: Forhandlere
+      family_title: Familieforhandlere
+      family_empty: Ingen familieforhandlere ennå
+      provider_title: Leverandørforhandlere
+      provider_empty: Ingen leverandørforhandlere er koblet til denne familien ennå
     merchant:
       confirm_accept: Slett forhandler
       confirm_body: Er du sikker på at du vil slette denne forhandleren? Fjerning av denne forhandleren
