--- a/config/locales/views/merchants/ro.yml
+++ b/config/locales/views/merchants/ro.yml
@@ -14,6 +14,10 @@ ro:
       empty: Niciun comerciant încă
       new: Comerciant nou
       title: Comercianți
+      family_title: Comercianți ai familiei
+      family_empty: Încă nu există comercianți ai familiei
+      provider_title: Comercianți furnizor
+      provider_empty: Niciun comerciant furnizor asociat încă acestei familii
     merchant:
       confirm_accept: Șterge comerciantul
       confirm_body: Ești sigur că vrei să ștergi acest comerciant? Eliminarea acestui comerciant
