--- a/config/locales/views/merchants/en.yml
+++ b/config/locales/views/merchants/en.yml
@@ -18,6 +18,11 @@ en:
       family_empty: No family merchants yet
       provider_title: Provider merchants
       provider_empty: No provider merchants linked to this family yet
+      provider_read_only: Provider merchants are synced from your connected institutions. They cannot be edited here.
+      table:
+        merchant: Merchant
+        actions: Actions
+        source: Source
     merchant:
       confirm_accept: Delete merchant
       confirm_body: Are you sure you want to delete this merchant? Removing this merchant
