--- a/config/locales/views/merchants/ro.yml
+++ b/config/locales/views/merchants/ro.yml
@@ -18,6 +18,11 @@ ro:
       family_empty: Încă nu există comercianți ai familiei
       provider_title: Comercianți furnizor
       provider_empty: Niciun comerciant furnizor asociat încă acestei familii
+      provider_read_only: Comercianții furnizor sunt sincronizați din instituțiile tale conectate. Nu pot fi editați aici.
+      table:
+        merchant: Comerciant
+        actions: Acțiuni
+        source: Sursă
     merchant:
       confirm_accept: Șterge comerciantul
       confirm_body: Ești sigur că vrei să ștergi acest comerciant? Eliminarea acestui comerciant
