--- a/config/locales/views/rules/en.yml
+++ b/config/locales/views/rules/en.yml
@@ -7,12 +7,13 @@ en:
       unnamed_rule: Unnamed Rule
       columns:
         date_time: Date/Time
-        execution_type: Execution Type
+        execution_type: Type
         status: Status
         rule_name: Rule Name
-        transactions_queued: Transactions Queued
-        transactions_processed: Transactions Processed
-        transactions_modified: Transactions Modified
+        transactions_counts:
+          queued: Queued
+          processed: Processed
+          modified: Modified
       execution_types:
         manual: Manual
         scheduled: Scheduled
